# spectis

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  ULTRAPLAN.md  bytebunkerlabs.html  docker-compose.yml  initial-draft-0.0.1.txt
agent/: Dockerfile  pyproject.toml
agent-instructions/: audit-agent.instructions.md  dlp-agent.instructions.md  entra-agent.instructions.md
agent/spectis_agent/: __init__.py  cli.py  scoring.py
agent/spectis_agent/reporters/: __init__.py  api_reporter.py  file_reporter.py
agent/spectis_agent/scanners/: __init__.py  config_scanner.py  network_scanner.py  process_scanner.py  tool_prober.py  workspace_scanner.py
agent/tests/: __init__.py  test_scanners.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: Layout.tsx  LoginForm.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/pages/: Agents.tsx  LiveFeed.tsx  Overview.tsx  Scans.tsx  Servers.tsx
dashboard/src/types/: index.ts
helm/spectis/: Chart.yaml  values.yaml
helm/spectis/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
orchestrator/: Dockerfile  alembic.ini  pyproject.toml
orchestrator/alembic/: env.py
orchestrator/app/: auth.py  config.py  main.py
orchestrator/app/models/: __init__.py  agent.py  user.py  (+3 more)
orchestrator/tests/: conftest.py  test_auth.py  test_orchestrator.py  test_validator.py
scripts/: seed_demo.py
(+16 files in other folders)
