[project]
name = "spectis-agent"
version = "0.1.0"
description = "Spectis Endpoint Scanner Agent"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "psutil>=6.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "tomli>=2.0.0;python_version<'3.12'",
]

[project.scripts]
spectis-agent = "spectis_agent.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["spectis_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
